--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Askiyo'
+description: 'Askiyo is a platform for asking questions and getting answers.'
 ---
 
 ## Setup your development
